2012-01-02  Rene Liebscher <R.Liebscher@gmx.de>

	bug #21663 AT90PWM efuse incorrect
	bug #30438 efuse bits written as 0 on at90pwmxx parts
	* avrdude.conf.in: (pwm2, pwm2b, pwm3, pwm3b) <efuse.write>: Write 
	eight bits
	
	* avrdude.conf.in: made part parents (pwm3 = pwm2, pwm3b = pwm2b, 
	pwm2b = pwm2 + different signature)
	
	* ChangeLog-2011: New file, rotate ChangeLog for new year.